--- a/pom.xml
+++ b/pom.xml
@@ -34,11 +34,6 @@
             <artifactId>mysql-connector-java</artifactId>
             <scope>runtime</scope>
         </dependency>
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-mongodb</artifactId>
-        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
@@ -68,7 +63,6 @@
             <artifactId>spring-boot-starter-websocket</artifactId>
             <version>1.3.5.RELEASE</version>
         </dependency>
-
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
@@ -94,8 +88,12 @@
             <scope>system</scope>
             <systemPath>${project.basedir}/lib/sybase-driver-12.jar</systemPath>
         </dependency>
-
-
+        <!--c3p0连接池-->
+        <dependency>
+            <groupId>com.mchange</groupId>
+            <artifactId>c3p0</artifactId>
+            <version>0.9.5.2</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -103,10 +101,16 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
                 <configuration>
-                    <mainClass>
-                        com.nju.software.TopologySpringApplication
-                    </mainClass>
+                    <includeSystemScope>true</includeSystemScope>
+                    <fork>true</fork>
                 </configuration>
             </plugin>
             <!--            打包时候跳过test-->
